sample/asm/errors/function_from_undefined_function.asm
.function: main/1
    function 1 foo/0

    izero 0
    return
.end
